Fixed the waiting issue
Fixed the checkout, waiting issue and customer difficulty assignment issues